[tool.poetry]
name = "ytmusicdl"
version = "0.1.0"
description = "YouTube Music downloader with metadata and synchronised lyrics"
authors = ["Daniel Chen <danielchen04@hotmail.ca>"]
license = "LGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/potatoeggy/ytmusicdl"
documentation = "https://github.com/potatoeggy/ytmusicdl"
keywords = ["mp3", "download"]

[tool.poetry.scripts]
ytmusicdl = "noveldown.cli:main"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
